// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconMarkerComponent component should render empty marker with smaller svg 1`] = `
<sg-icon-marker
  __ngContext__={[Function LRootView]}
  elementRef={[Function ElementRef]}
  selected="false"
  selectedChange={[Function EventEmitter_]}
>
  <svg
    class="small"
    viewBox="0 0 22 33"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <style>
         .b { fill: url(#a); } 
      </style>
      <radialgradient
        cx="0.5"
        cy="0.5"
        gradientUnits="objectBoundingBox"
        id="a"
        r="0.5"
      >
        <stop
          offset="0"
          stop-opacity="0.396"
        />
        <stop
          offset="1"
          stop-opacity="0"
        />
      </radialgradient>
    </defs>
    <ellipse
      class="b"
      cx="7"
      cy="3.5"
      rx="7"
      ry="3.5"
    />
    <path
      d="M10,28l7.6-11.4C19.5,13.737,20,12.255,20,10A10,10,0,0,0,0,10c0,2.255.511,3.753,2.4,6.6S10,28,10,28Z"
    />
  </svg>
</sg-icon-marker>
`;

exports[`IconMarkerComponent component should render marker with bigger svg and with icon 1`] = `
<sg-icon-marker
  __ngContext__={[Function LRootView]}
  elementRef={[Function ElementRef]}
  icon={[Function String]}
  selected="false"
  selectedChange={[Function EventEmitter_]}
>
  <svg
    viewBox="0 0 22 33"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <defs>
      <style>
         .b { fill: url(#a); } 
      </style>
      <radialgradient
        cx="0.5"
        cy="0.5"
        gradientUnits="objectBoundingBox"
        id="a"
        r="0.5"
      >
        <stop
          offset="0"
          stop-opacity="0.396"
        />
        <stop
          offset="1"
          stop-opacity="0"
        />
      </radialgradient>
    </defs>
    <ellipse
      class="b"
      cx="7"
      cy="3.5"
      rx="7"
      ry="3.5"
    />
    <path
      d="M10,28l7.6-11.4C19.5,13.737,20,12.255,20,10A10,10,0,0,0,0,10c0,2.255.511,3.753,2.4,6.6S10,28,10,28Z"
    />
  </svg><mat-icon
    aria-hidden="true"
    class="mat-icon notranslate material-icons mat-icon-no-color"
    data-mat-icon-type="font"
    role="img"
  >
    latlon_16px
  </mat-icon>
</sg-icon-marker>
`;
